# routine_project

./: .gitignore  docker-compose.yml
back/: Dockerfile
back/code/: Cargo.toml  example.env  log_config.yml
back/code/src/: app_config.rs  authorisation.rs  autorization.rs  convertations.rs  databases.rs  logging.rs  main.rs  models.rs  redis_handlers.rs  services.rs  tools.rs  users_managing.rs
back/code/src/services/: boards_managing.rs  tasks_managing.rs
back/code/src/users_managing/: authorized_users_managing.rs  unauthorized_users_managing.rs
db/: db_setup  db_setup.sql
front/: Dockerfile  docker-entrypoint.sh  server.js
front/public/: account.css  account.js  board.css  board.js  index.css  index.html  index.js  updateable_task.css  updateable_task.js  workspace.css  workspace.js
front/static_files/: 404.html  index.html
front/views/: account.ejs  board.ejs  updateable_task.ejs  workspace.ejs
nginx/: Dockerfile  docker-entrypoint.sh  nginx.conf  setup
nginx/script/: start.sh
