[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix = "0.13.0"
actix-web = "4.3.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

dotenv = "0.15.0"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "postgres"] }