[package]
name = "code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix = "0.13.0"
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
http = "0.2.9"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
redis = { version = "0.20.2", features = ["tokio-comp"]}

log = "0.4.17"
log4rs = "1.2.0"

sha2 = "0.10.6"
base64 = "0.21.0"

jwt = "0.16.0"
hmac = "0.12.1"

lettre = "0.10.4"
lettre_email = "0.9.4"

uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
regex = "1.5.4"